:sparkles: [Android] Window 实现了TopBar的自适应渲染
并且在 TopBar 提供了 应用图标 与 窗口最小化的按钮（与功能）